module authentication-service
optimize code, enhance todo before implement function use AOP